--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^7.1.5",
     "@types/jest": "^26.0.22",
-    "apollo-server": "^2.21.0",
-    "apollo-server-express": "^2.24.1",
+    "apollo-server-express": "3.1.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "get-port": "^5.1.1",
-    "graphql": "^15.5.0",
+    "graphql": "^15.5.1",
     "graphql-redis-subscriptions": "^2.4.0",
     "graphql-request": "^3.4.0",
+    "graphql-subscriptions": "^1.2.1",
     "ioredis": "^4.27.7",
     "jest": "^26.6.3",
     "nexus": "^1.0.0",
+    "nodemon": "^2.0.12",
+    "subscriptions-transport-ws": "^0.9.19",
     "ts-jest": "^26.5.4"
   },
   "devDependencies": {
